# sports-mcp-server

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
dataset_registry.curated/marts_baseball/: dim_franchise.json  dim_team_season.json  google_trends_interest.json  player_season_batter_stats.json  player_season_pitcher_stats.json  savant_park_factors.json
dataset_registry.curated/staging_baseball/: pitcher_game_logs.json  raw_ballpark_dimensions.json  raw_chadwick_players.json  raw_game_inning_results.json  raw_game_odds_sbr.json  raw_game_summaries.json  raw_pitch_logs.json  starting_lineups.json  team_game_logs.json
dataset_registry.generated/marts_baseball/: dim_franchise.json  dim_team_season.json  player_season_qualified_batter_stats.json  player_season_qualified_pitcher_stats.json  savant_park_factors.json
dataset_registry.generated/staging_baseball/: pitcher_game_logs.json  raw_ballpark_dimensions.json  raw_chadwick_players.json  starting_lineups.json  team_game_logs.json
docs/: notes.md
scripts/: generate_dataset_registry.py
src/sports_mcp_server/: main.py
