[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-mcp-server"
version = "0.1.0"
description = "Server coordinating model control-plane requests."
authors = [{ name = "Bryan" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
